--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,10 @@ description = "A thread pool implementation for educational purposes"
 edition = "2021"
 name = "wadingpool"
 version = "0.1.0"
+
+[dev-dependencies]
+rand = "0.8.5"
+tracing-subscriber = "0.3.18"
+
+[dependencies]
+tracing = "0.1.40"
